fix top right button too close(b2b unit page) issue

--- a/feature-libs/organization/administration/styles/_buttons.scss
+++ b/feature-libs/organization/administration/styles/_buttons.scss
@@ -47,6 +47,7 @@
     }
 
     padding: var(--cx-spatial-base);
+    margin: var(--cx-spatial-base);
     font-size: 1rem;
     line-height: 1.5rem;
 
